Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28035

Browser example does not load qt-project.org properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0 RC 1
    • 4.8.3, 5.0.0 Beta 2
    • Examples and Demos
    • None
    • Windows 7 64b using 32b package
      Mac 10.8
      Linux
    • qtbase 3279ed584ec132b305ef2079b22952fc62511b04 (Only allow caching for HTTP GET and HEAD requests, 23.11.2012)

      Using the Qt5 beta 2 package

      qt-project.org does not load properly.

      Steps to reproduce:
      1 - open the browser
      2 - go to qt-project.org
      3 - click on the top left qt icon
      4 - => problem loading the page

      5 - add qt.project.org in File->Edit->General Home field
      6 - Select History->Home
      7 - => same problem

      Note that is you refresh the page, it loads fine the second time

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            mibrunin Michael Bruning
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes